--- a/main.css
+++ b/main.css
@@ -6,11 +6,11 @@
   -moz-margin-end:0 !important;
 }
 
-#PlacesToolbarItems {
+#PersonalToolbar {
 	margin: 0 3px 3px 3px;
 }
 
-#PlacesToolbar .bookmark-item {
+#PersonalToolbar toolbarbutton {
 border-bottom-color: rgb(0, 0, 0) !important;
 border-bottom-style: none !important;
 border-left-color: rgb(0, 0, 0) !important;
@@ -32,7 +32,7 @@ padding-top: 8px !important;
 -moz-appearance: none !important;
 /*-moz-image-region: rect(0px, 126px, 18px, 108px) !important;*/
 }
-#PlacesToolbar .bookmark-item  {
+#PersonalToolbar toolbarbutton  {
 border-bottom-color: transparent !important;
 border-bottom-left-radius: 2px !important;
 border-bottom-right-radius: 2px !important;
@@ -65,7 +65,7 @@ transition-property: background-color, border-color, box-shadow !important;
 /*-moz-image-region: rect(0px, 126px, 18px, 108px) !important;*/
 }
 
-#PlacesToolbar .bookmark-item:hover {
+#PersonalToolbar toolbarbutton:hover {
 border-bottom-color: rgb(0, 0, 0) !important;
 border-bottom-style: none !important;
 border-left-color: rgb(0, 0, 0) !important;
@@ -87,7 +87,7 @@ padding-top: 8px !important;
 -moz-appearance: none !important;
 /*-moz-image-region: rect(0px, 126px, 18px, 108px) !important;*/
 }
-#PlacesToolbar .bookmark-item:hover  {
+#PersonalToolbar toolbarbutton:hover  {
 background-image: linear-gradient(rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.1)) !important;
 border-bottom-color: rgba(23, 51, 78, 0.25) !important;
 border-bottom-left-radius: 2px !important;
@@ -121,8 +121,8 @@ transition-property: background-color, border-color, box-shadow !important;
 /*-moz-image-region: rect(0px, 126px, 18px, 108px) !important;*/
 }
 
-#PlacesToolbar .bookmark-item:active,
-#PlacesToolbar .bookmark-item[open] {
+#PersonalToolbar toolbarbutton:active,
+#PersonalToolbar toolbarbutton[open] {
 border-bottom-color: rgb(0, 0, 0) !important;
 border-bottom-style: none !important;
 border-left-color: rgb(0, 0, 0) !important;
@@ -143,8 +143,8 @@ padding-top: 8px !important;
 -moz-appearance: none !important;
 /*-moz-image-region: rect(0px, 126px, 18px, 108px) !important;*/
 }
-#PlacesToolbar .bookmark-item:active,
-#PlacesToolbar .bookmark-item[open] {
+#PersonalToolbar toolbarbutton:active,
+#PersonalToolbar toolbarbutton[open] {
 background-color: rgba(23, 51, 78, 0.15) !important;
 background-image: linear-gradient(rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.1)) !important;
 border-bottom-color: rgba(23, 51, 78, 0.4) !important;
