--- a/main.css
+++ b/main.css
@@ -22,10 +22,7 @@ border-top-style: none !important;
 /*height: 40px !important;*/
 /*list-style-image: url("chrome://browser/skin/Toolbar.png") !important;*/
 /*max-width: none !important;*/
-padding-bottom: 8px !important;
-padding-left: 2px !important;
-padding-right: 2px !important;
-padding-top: 8px !important;
+padding: 8px 2px !important;
 /*perspective-origin: 18px 20px !important;*/
 /*transform-origin: 18px 20px !important;*/
 /*width: 36px !important;*/
@@ -53,10 +50,7 @@ box-shadow: transparent 0px 1px 0px 0px inset, transparent 0px 1px 0px 0px, tran
 /*height: 24px !important;*/
 /*list-style-image: url("chrome://browser/skin/Toolbar.png") !important;*/
 margin-right: 0px !important;
-padding-bottom: 2px !important;
-padding-left: 6px !important;
-padding-right: 6px !important;
-padding-top: 2px !important;
+padding: 2px 4px !important;
 /*perspective-origin: 16px 12px !important;*/
 /*transform-origin: 16px 12px !important;*/
 transition-duration: 0.15s !important;
@@ -77,10 +71,7 @@ border-top-style: none !important;
 /*height: 40px !important;*/
 /*list-style-image: url("chrome://browser/skin/Toolbar.png") !important;*/
 /*max-width: none !important;*/
-padding-bottom: 8px !important;
-padding-left: 2px !important;
-padding-right: 2px !important;
-padding-top: 8px !important;
+padding: 8px 2px !important;
 /*perspective-origin: 18px 20px !important;*/
 /*transform-origin: 18px 20px !important;*/
 /*width: 36px !important;*/
@@ -109,10 +100,7 @@ box-shadow: rgba(255, 255, 255, 0.3) 0px 1px 0px 0px inset, rgba(23, 51, 78, 0.0
 /*height: 24px !important;*/
 /*list-style-image: url("chrome://browser/skin/Toolbar.png") !important;*/
 margin-right: 0px !important;
-padding-bottom: 2px !important;
-padding-left: 6px !important;
-padding-right: 6px !important;
-padding-top: 2px !important;
+padding: 2px 4px !important;
 /*perspective-origin: 16px 12px !important;*/
 /*transform-origin: 16px 12px !important;*/
 transition-duration: 0.15s !important;
@@ -134,9 +122,7 @@ border-top-style: none !important;
 /*height: 40px !important;*/
 /*list-style-image: url("chrome://browser/skin/Toolbar.png") !important;*/
 /*max-width: none !important;*/
-padding-bottom: 8px !important;
-padding-left: 2px !important;
-padding-top: 8px !important;
+padding: 8px 2px !important;
 /*perspective-origin: 18px 20px !important;*/
 /*transform-origin: 18px 20px !important;*/
 /*width: 36px !important;*/
@@ -167,10 +153,7 @@ box-shadow: rgba(23, 51, 78, 0.1) 0px 1px 1px 0px inset, rgba(23, 51, 78, 0.2) 0
 /*height: 24px !important;*/
 /*list-style-image: url("chrome://browser/skin/Toolbar.png") !important;*/
 margin-right: 0px !important;
-padding-bottom: 2px !important;
-padding-left: 6px !important;
-padding-right: 6px !important;
-padding-top: 2px !important;
+padding: 2px 4px !important;
 /*perspective-origin: 16px 12px !important;*/
 /*transform-origin: 16px 12px !important;*/
 transition-property: none, none, none !important;
